--- a/base.cfg
+++ b/base.cfg
@@ -30,7 +30,7 @@ environment-vars =
 eggs =
     Plone
     Pillow
-    genweb6.upc [test]
+    genweb6.serveistic [test]
 
 [vscode]
 recipe = collective.recipe.vscode
@@ -53,7 +53,7 @@ recipe = zc.recipe.testrunner
 eggs = ${instance:eggs}
 initialization =
     os.environ['TZ'] = 'UTC'
-defaults = ['-s', 'genweb6.upc', '--auto-color', '--auto-progress']
+defaults = ['-s', 'genweb6.serveistic', '--auto-color', '--auto-progress']
 
 
 [coverage]
@@ -107,5 +107,5 @@ scripts =
    plone-compile-resources
 
 [versions]
-# Don't use a released version of genweb6.upc
-genweb6.upc =
+# Don't use a released version of genweb6.serveistic
+genweb6.serveistic =
